
20 Feb 2017:
* HydroSightModel:integrateData(): local search procedure for kriging edit to ensure points both sides of the estimation time point are included in the temporal kriging.

2 Mar 2017:
* HydroSightModel:integrateData(): Universal kriging equations changed from variogram values to covariances.
* HydroSightModel:calibrateModel(): residuals converted to single data type only when there are >1 parameter sets.

17 Mar 2017
* doDataQualityAnalysis(): rate of change analysis edits to look at rate of change forward in time. Originally a bug caused it to look backward.

17 Mar 2017
* HydroSight_GUI. Version number updated to 1.2.7

22 May 2017
* Error fixed in estimate of residual noise, sigma_n, for TFN and exp. models. It is now derived using the innovations, not residuals.
* Outlier detection now uses an estimate of the residual noise that is a function of time i.e the time between prior observation and the point being assesed.

4 August 2017
* pumpingRate_SAestimation() updated and SP-UCI code and model_TFN.m edited to allow downscaling of infrequent (>daily) groundwater pumping data to daily, weeekly or monthly rates.

16 August 2017
* Bug fixed with SCE-UI while-loop for invalid params.

18 August 2017
* responseFunction_Pearsons.getParameters_physicalLimit() upperlimit for 'A' reduced to log(1/1000) in an attempt to improve est. of free drainage.

18 August 2017
* Alpha version of a new calibration results GUI. It now allows the plotting of the forcing data.

24 August 2017
* Alpha version of a new calibration results GUI extended to handle MCMC outputs and plot model specific outputs eg weighting fucntion plots.
* Bug fixed - deleting data preparation rows now deletes the actual model object.