@@ -36,3 +36,6 @@ This file documents changes to HydroSight from version 1.2.6 onwards.
 24 August 2017
 * Alpha version of a new calibration results GUI extended to handle MCMC outputs and plot model specific outputs eg weighting fucntion plots.
 * Bug fixed - deleting data preparation rows now deletes the actual model object.
+* Boot time significantly increased by removing use of createtable(). Tables can no longer be sorted.
+* Alpha version of a new calibration results GUI edited to work with exponential model ('get' functions for forcing data and derived data moved into HydroSightModel())
+* Alpha version of a new calibration results GUI tabs turn on/off when relevant data is/is not available.
